--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "A website that takes in inputs from the frontend and processes them in a backend Excel sheet.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js",
+    "dev":"nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -36,5 +38,8 @@
     "express": "^4.17.1",
     "pug": "^3.0.2",
     "xlsx": "^0.16.9"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7"
   }
 }
