--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
-    "dev":"nodemon index.js"
+    "dev": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -34,10 +34,13 @@
   },
   "homepage": "https://github.com/reoyamanaka/excelBackend#readme",
   "dependencies": {
+    "@formulajs/formulajs": "^2.6.5",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "pug": "^3.0.2",
-    "xlsx": "^0.16.9"
+    "xlsx": "^0.16.9",
+    "xlsx-calc": "^0.6.8",
+    "xlsx-populate": "^1.21.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
